--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,10 @@ DerivedData
 *.ipa
 *.xcuserstate
 
+# Bundler
+#
+/bundler/
+
 # CocoaPods
 # We recommend against adding the Pods directory to your .gitignore. However
 # you should judge for yourself, the pros and cons are mentioned at:
@@ -31,3 +35,8 @@ DerivedData
 # Carthage/Checkouts
 
 Carthage/Build
+
+# Fastlane
+#
+fastlane/report.xml
+fastlane/**/
